Merged PR 59672: #77205 Added traffic sign rvv code and window times
#77205 Added traffic sign rvv code and window times

Related work items: #77205